--- a/opencda/scenario_testing/config_yaml/platoon_joining_2lanefree_cosim.yaml
+++ b/opencda/scenario_testing/config_yaml/platoon_joining_2lanefree_cosim.yaml
@@ -8,14 +8,18 @@ description: |-
 vehicle_base:
   sensing:
     perception:
-      activate: false # when not activated, objects positions will be retrieved from server directly
+      activate: true # when not activated, objects positions will be retrieved from server directly
       camera:
         visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
-        num: 0 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
+        num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
         # relative positions (x,y,z,yaw) of the camera. len(positions) should be equal to camera num
-        positions: []
+        positions:
+        - [ 2.5, 0, 1.0, 0 ]
+        - [ 0.0, 0.3, 1.8, 100 ]
+        - [ 0.0, -0.3, 1.8, -100 ]
+        - [ -2.0, 0.0, 1.5, 180 ]
       lidar:
-        visualize: false
+        visualize: true
   map_manager:
     visualize: false
     activate: false
@@ -34,6 +38,7 @@ sumo:
   host: ~
   gui: true
   client_order: 1
+  multiple_clients: False
   step_length: ${world.fixed_delta_seconds}
 
 # define the platoon basic characteristics
@@ -52,12 +57,16 @@ scenario:
         - name: cav1
           spawn_position: [-350, 8.3, 0.3, 0, 0, 0] # x, y, z, roll, yaw, pitch
           perception:
+            activate: true
             camera:
               visualize: 1 # how many camera images need to be visualized. 0 means no visualization for camera
-              num: 1 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
+              num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
               # relative positions (x,y,z,yaw) of the camera. len(positions) should be equal to camera num
               positions:
-                - [2.5, 0, 1.0, 0]
+                - [ 2.5, 0, 1.0, 0 ]
+                - [ 0.0, 0.3, 1.8, 100 ]
+                - [ 0.0, -0.3, 1.8, -100 ]
+                - [ -2.0, 0.0, 1.5, 180 ]
             lidar:
               visualize: true
           behavior:
@@ -70,21 +79,36 @@ scenario:
           spawn_position: [-370, 8.3, 0.3, 0, 0, 0]
         - name: cav4
           spawn_position: [-380, 8.3, 0.3, 0, 0, 0]
+#        - name: cav5
+#          spawn_position: [-390, 8.3, 0.3, 0, 0, 0 ]
+#        - name: cav6
+#          spawn_position: [-400, 8.3, 0.3, 0, 0, 0 ]
+#        - name: cav7
+#          spawn_position: [-410, 8.3, 0.3, 0, 0, 0 ]
+#        - name: cav8
+#          spawn_position: [-420, 8.3, 0.3, 0, 0, 0 ]
+#        - name: cav9
+#          spawn_position: [-430, 8.3, 0.3, 0, 0, 0 ]
+
   single_cav_list: # this is for merging vehicle or single cav without v2x
     - name: single_cav
-      spawn_position: [-380, 4.8, 0.3, 0, 0, 0]
+      spawn_position: [-380, 10.5, 0.3, 0, 0, 0]
       # when this is defined, the above parameter will be ignored, and a special map function will
       # be used to define the spawn position based on the argument
       spawn_special: [0.655]
       destination: [300, 12.0, 0]
       sensing:
         perception:
+          activate: true
           camera:
             visualize: 1 # how many camera images need to be visualized. 0 means no visualization for camera
-            num: 1 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
+            num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
             # relative positions (x,y,z,yaw) of the camera. len(positions) should be equal to camera num
             positions:
-              - [2.5, 0, 1.0, 0]
+              - [ 2.5, 0, 1.0, 0 ]
+              - [ 0.0, 0.3, 1.8, 100 ]
+              - [ 0.0, -0.3, 1.8, -100 ]
+              - [ -2.0, 0.0, 1.5, 180 ]
           lidar:
             visualize: true
       v2x:
