--- a/file_4.yaml
+++ b/file_4.yaml
@@ -4,7 +4,15 @@ carla_traffic_manager:
   ignore_lights_percentage: 0
   vehicle_list:
   - spawn_position:
-    - 66.2707
+    - 125.0926
+    - 149.51
+    - 0.3
+    - 0
+    - 0
+    - 0
+    vehicle_speed_perc: -200
+  - spawn_position:
+    - 121.2634
     - 136.51
     - 0.3
     - 0
@@ -12,7 +20,7 @@ carla_traffic_manager:
     - 0
     vehicle_speed_perc: -200
   - spawn_position:
-    - 146.3526
+    - 80.7365
     - 143.51
     - 0.3
     - 0
@@ -20,15 +28,15 @@ carla_traffic_manager:
     - 0
     vehicle_speed_perc: -200
   - spawn_position:
-    - 79.7838
-    - 136.51
+    - 158.1972
+    - 143.51
     - 0.3
     - 0
     - 0
     - 0
     vehicle_speed_perc: -200
   - spawn_position:
-    - 120.0512
+    - 100.4697
     - 146.51
     - 0.3
     - 0
@@ -36,7 +44,15 @@ carla_traffic_manager:
     - 0
     vehicle_speed_perc: -200
   - spawn_position:
-    - 125.7857
+    - 68.4432
+    - 143.51
+    - 0.3
+    - 0
+    - 0
+    - 0
+    vehicle_speed_perc: -200
+  - spawn_position:
+    - 156.0602
     - 136.51
     - 0.3
     - 0
@@ -44,8 +60,48 @@ carla_traffic_manager:
     - 0
     vehicle_speed_perc: -200
   - spawn_position:
-    - 128.7973
+    - 88.5994
+    - 146.51
+    - 0.3
+    - 0
+    - 0
+    - 0
+    vehicle_speed_perc: -200
+  - spawn_position:
+    - 60.8507
+    - 149.51
+    - 0.3
+    - 0
+    - 0
+    - 0
+    vehicle_speed_perc: -200
+  - spawn_position:
+    - 79.2864
+    - 149.51
+    - 0.3
+    - 0
+    - 0
+    - 0
+    vehicle_speed_perc: -200
+  - spawn_position:
+    - 55.8898
     - 143.51
+    - 0.3
+    - 0
+    - 0
+    - 0
+    vehicle_speed_perc: -200
+  - spawn_position:
+    - 136.2686
+    - 149.51
+    - 0.3
+    - 0
+    - 0
+    - 0
+    vehicle_speed_perc: -200
+  - spawn_position:
+    - 155.4882
+    - 146.51
     - 0.3
     - 0
     - 0
