--- a/opencda/scenario_testing/config_yaml/platoon_protocol_test.yaml
+++ b/opencda/scenario_testing/config_yaml/platoon_protocol_test.yaml
@@ -4,74 +4,122 @@ carla_traffic_manager:
   ignore_lights_percentage: 0
   vehicle_list:
   - spawn_position:
-    - 65.7113
-    - 143.51
-    - 0.3
-    - 0
-    - 0
-    - 0
-    vehicle_speed_perc: -200
-  - spawn_position:
-    - 98.6171
-    - 143.51
-    - 0.3
-    - 0
-    - 0
-    - 0
-    vehicle_speed_perc: -200
-  - spawn_position:
-    - 69.0538
+    - 125.0926
     - 149.51
     - 0.3
     - 0
     - 0
     - 0
-    vehicle_speed_perc: -200
+    vehicle_speed_perc: -90
   - spawn_position:
-    - 151.7001
-    - 146.51
-    - 0.3
-    - 0
-    - 0
-    - 0
-    vehicle_speed_perc: -200
-  - spawn_position:
-    - 130.1324
+    - 121.2634
     - 136.51
     - 0.3
     - 0
     - 0
     - 0
-    vehicle_speed_perc: -200
+    vehicle_speed_perc: -90
   - spawn_position:
-    - 76.8512
-    - 136.51
-    - 0.3
-    - 0
-    - 0
-    - 0
-    vehicle_speed_perc: -200
-  - spawn_position:
-    - 155.7351
-    - 136.51
-    - 0.3
-    - 0
-    - 0
-    - 0
-    vehicle_speed_perc: -200
-  - spawn_position:
-    - 119.1405
+    - 80.7365
     - 143.51
     - 0.3
     - 0
     - 0
     - 0
-    vehicle_speed_perc: -200
+    vehicle_speed_perc: -90
+  - spawn_position:
+    - 158.1972
+    - 143.51
+    - 0.3
+    - 0
+    - 0
+    - 0
+    vehicle_speed_perc: -90
+  - spawn_position:
+    - 100.4697
+    - 146.51
+    - 0.3
+    - 0
+    - 0
+    - 0
+    vehicle_speed_perc: -90
+  - spawn_position:
+    - 68.4432
+    - 143.51
+    - 0.3
+    - 0
+    - 0
+    - 0
+    vehicle_speed_perc: -90
+  - spawn_position:
+    - 91.0
+    - 139.51
+    - 0.3
+    - 0
+    - 0
+    - 0
+    vehicle_speed_perc: -90
+  - spawn_position:
+    - 156.0602
+    - 136.51
+    - 0.3
+    - 0
+    - 0
+    - 0
+    vehicle_speed_perc: -90
+  - spawn_position:
+    - 88.5994
+    - 146.51
+    - 0.3
+    - 0
+    - 0
+    - 0
+    vehicle_speed_perc: -90
+  - spawn_position:
+    - 60.8507
+    - 149.51
+    - 0.3
+    - 0
+    - 0
+    - 0
+    vehicle_speed_perc: -90
+  - spawn_position:
+    - 79.2864
+    - 149.51
+    - 0.3
+    - 0
+    - 0
+    - 0
+    vehicle_speed_perc: -90
+  - spawn_position:
+    - 55.8898
+    - 143.51
+    - 0.3
+    - 0
+    - 0
+    - 0
+    vehicle_speed_perc: -90
+  - spawn_position:
+    - 136.2686
+    - 149.51
+    - 0.3
+    - 0
+    - 0
+    - 0
+    vehicle_speed_perc: -90
+  - spawn_position:
+    - 155.4882
+    - 146.51
+    - 0.3
+    - 0
+    - 0
+    - 0
+    vehicle_speed_perc: -90
 
 vehicle_base:
   sensing:
     perception:
-      activate: true # when not activated, objects positions will be retrieved from server directly
+      activate: false # when not activated, objects positions will be retrieved from server directly
       camera:
         visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
         num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
@@ -97,15 +145,15 @@ vehicle_base:
     visualize: false
     activate: false
   behavior: &base_behavior
-    max_speed: 70 # maximum speed, km/h
+    max_speed: 80 # maximum speed, km/h
     tailgate_speed: 80 # when a vehicles needs to be close to another vehicle asap
     overtake_allowed: false # whether overtake allowed, typically false for platoon leader
     collision_time_ahead: 1.1 # used for collision checking
 
 platoon_base:
   max_capacity: 10
-  inter_gap: 0.2 # desired time gap
-  open_gap: 1.0 # open gap
+  inter_gap: 0.6 # desired time gap
+  open_gap: 1.2 # open gap
   warm_up_speed: 30 # required speed before cooperative merging
 
 
@@ -116,7 +164,7 @@ scenario:
       destination: [606.87, 145.39, 0]
       sensing:
         perception:
-          activate: true
+          activate: false
           camera:
             visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
             num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
@@ -127,14 +175,14 @@ scenario:
               - [0.0, -0.3, 1.8, -100]
               - [-2.0, 0.0, 1.5, 180]
           lidar: # lidar sensor configuration, check CARLA sensor reference for more details
-            visualize: true
+            visualize: false
       v2x:
         communication_range: 35
         platoon_init_pos: 1
         pldm: true
       behavior:
         <<: *base_behavior
-        max_speed: 70 # maximum speed, km/h
+        max_speed: 80 # maximum speed, km/h
         tailgate_speed: 111
         overtake_allowed: false
         local_planner:
@@ -146,7 +194,7 @@ scenario:
       destination: [606.87, 145.39, 0]
       sensing:
         perception:
-          activate: true
+          activate: false
           camera:
             visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
             num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
@@ -157,7 +205,7 @@ scenario:
               - [0.0, -0.3, 1.8, -100]
               - [-2.0, 0.0, 1.5, 180]
           lidar: # lidar sensor configuration, check CARLA sensor reference for more details
-            visualize: true
+            visualize: false
       v2x:
         communication_range: 35
         platoon_init_pos: 2
@@ -176,7 +224,7 @@ scenario:
       destination: [606.87, 145.39, 0]
       sensing:
         perception:
-          activate: true
+          activate: false
           camera:
             visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
             num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
@@ -187,7 +235,7 @@ scenario:
               - [0.0, -0.3, 1.8, -100]
               - [-2.0, 0.0, 1.5, 180]
           lidar: # lidar sensor configuration, check CARLA sensor reference for more details
-            visualize: true
+            visualize: false
       v2x:
         communication_range: 35
         platoon_init_pos: 3
@@ -202,11 +250,11 @@ scenario:
           debug: false
 
     - name: cav4
-      spawn_position: [91.7194, 139.51, 0.3, 0, 0, 0]
+      spawn_position: [71.7194, 139.0, 0.3, 0, 0, 0]
       destination: [606.87, 145.39, 0]
       sensing:
         perception:
-          activate: true
+          activate: false
           camera:
             visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
             num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
@@ -217,10 +265,10 @@ scenario:
               - [0.0, -0.3, 1.8, -100]
               - [-2.0, 0.0, 1.5, 180]
           lidar: # lidar sensor configuration, check CARLA sensor reference for more details
-            visualize: true
+            visualize: false
       v2x:
         communication_range: 35
-        platoon_init_pos: 4
+        platoon_init_pos: 0
         pldm: true
       behavior:
         <<: *base_behavior
