--- a/opencda/scenario_testing/config_yaml/default.yaml
+++ b/opencda/scenario_testing/config_yaml/default.yaml
@@ -156,13 +156,13 @@ vehicle_base:
 # define the background traffic control by carla
 carla_traffic_manager:
   sync_mode: true # has to be same as the world setting
-  global_distance: 5 # the minimum distance in meters that vehicles have to keep with the rest
+  global_distance: 4 # the minimum distance in meters that vehicles have to keep with the rest
   # Sets the difference the vehicle's intended speed and its current speed limit.
   #  Carla default speed is 30 km/h, so -100 represents 60 km/h,
   # and 20 represents 24 km/h
   global_speed_perc: -100
   set_osm_mode: true # Enables or disables the OSM mode.
-  auto_lane_change: false
+  auto_lane_change: true
   ignore_lights_percentage: 0 # whether set the traffic ignore traffic lights
   random: false # whether to random select vehicles' color and model
   vehicle_list: []  # define in each scenario. If set to ~, then the vehicles be spawned in a certain range
