--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,21 @@
-numpy==1.20.0
+numpy==1.21.6
 matplotlib==3.4.2
 networkx==2.5.1
 pillow
 pyparsing==2.4.7
 six==1.16.0
-open3d
+open3d==0.16.0
 opencv-python==4.5.2.52
-pandas
+pandas==1.3.4
 pygame
 scikit-learn==0.24.2
 scipy==1.6.3
 seaborn
 lxml
 shapely==1.8.4
+Pillow>=7.1.2
+psutil  # system resources
+PyYAML>=5.3.1
+requests>=2.23.0
+thop>=0.1.1  # FLOPs computation
+tqdm>=4.64.0
