--- a/opencda/scenario_testing/config_yaml/platoon_protocol_test.yaml
+++ b/opencda/scenario_testing/config_yaml/platoon_protocol_test.yaml
@@ -10,7 +10,7 @@ carla_traffic_manager:
     - 0
     - 0
     - 0
-    vehicle_speed_perc: -90
+    vehicle_speed_perc: -200
   - spawn_position:
     - 121.2634
     - 136.51
@@ -18,23 +18,7 @@ carla_traffic_manager:
     - 0
     - 0
     - 0
-    vehicle_speed_perc: -90
-  - spawn_position:
-    - 80.7365
-    - 143.51
-    - 0.3
-    - 0
-    - 0
-    - 0
-    vehicle_speed_perc: -90
-  - spawn_position:
-    - 158.1972
-    - 143.51
-    - 0.3
-    - 0
-    - 0
-    - 0
-    vehicle_speed_perc: -90
+    vehicle_speed_perc: -200
   - spawn_position:
     - 100.4697
     - 146.51
@@ -42,7 +26,7 @@ carla_traffic_manager:
     - 0
     - 0
     - 0
-    vehicle_speed_perc: -90
+    vehicle_speed_perc: -200
   - spawn_position:
     - 68.4432
     - 143.51
@@ -50,23 +34,7 @@ carla_traffic_manager:
     - 0
     - 0
     - 0
-    vehicle_speed_perc: -90
-  - spawn_position:
-    - 91.0
-    - 139.51
-    - 0.3
-    - 0
-    - 0
-    - 0
-    vehicle_speed_perc: -90
-  - spawn_position:
-    - 156.0602
-    - 136.51
-    - 0.3
-    - 0
-    - 0
-    - 0
-    vehicle_speed_perc: -90
+    vehicle_speed_perc: -200
   - spawn_position:
     - 88.5994
     - 146.51
@@ -74,7 +42,7 @@ carla_traffic_manager:
     - 0
     - 0
     - 0
-    vehicle_speed_perc: -90
+    vehicle_speed_perc: -200
   - spawn_position:
     - 60.8507
     - 149.51
@@ -82,7 +50,7 @@ carla_traffic_manager:
     - 0
     - 0
     - 0
-    vehicle_speed_perc: -90
+    vehicle_speed_perc: -200
   - spawn_position:
     - 79.2864
     - 149.51
@@ -90,7 +58,7 @@ carla_traffic_manager:
     - 0
     - 0
     - 0
-    vehicle_speed_perc: -90
+    vehicle_speed_perc: -200
   - spawn_position:
     - 55.8898
     - 143.51
@@ -98,7 +66,7 @@ carla_traffic_manager:
     - 0
     - 0
     - 0
-    vehicle_speed_perc: -90
+    vehicle_speed_perc: -200
   - spawn_position:
     - 136.2686
     - 149.51
@@ -106,7 +74,7 @@ carla_traffic_manager:
     - 0
     - 0
     - 0
-    vehicle_speed_perc: -90
+    vehicle_speed_perc: -200
   - spawn_position:
     - 155.4882
     - 146.51
@@ -114,14 +82,14 @@ carla_traffic_manager:
     - 0
     - 0
     - 0
-    vehicle_speed_perc: -90
+    vehicle_speed_perc: -200
 
 vehicle_base:
   sensing:
     perception:
       activate: false # when not activated, objects positions will be retrieved from server directly
       camera:
-        visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
+        visualize: 1 # how many camera images need to be visualized. 0 means no visualization for camera
         num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
         # relative positions (x,y,z,yaw) of the camera. len(positions) should be equal to camera num
         positions:
@@ -148,7 +116,7 @@ vehicle_base:
     max_speed: 80 # maximum speed, km/h
     tailgate_speed: 80 # when a vehicles needs to be close to another vehicle asap
     overtake_allowed: false # whether overtake allowed, typically false for platoon leader
-    collision_time_ahead: 1.1 # used for collision checking
+    collision_time_ahead: 0.1 # used for collision checking
 
 platoon_base:
   max_capacity: 10
@@ -161,7 +129,7 @@ scenario:
   single_cav_list: # this is for merging vehicle or single cav without v2x
     - name: cav1
       spawn_position: [121.7194, 139.51, 0.3, 0, 0, 0]
-      destination: [606.87, 145.39, 0]
+      destination: [606.87, 143.39, 0]
       sensing:
         perception:
           activate: false
@@ -175,11 +143,12 @@ scenario:
               - [0.0, -0.3, 1.8, -100]
               - [-2.0, 0.0, 1.5, 180]
           lidar: # lidar sensor configuration, check CARLA sensor reference for more details
-            visualize: false
+            visualize: true
       v2x:
         communication_range: 35
         platoon_init_pos: 1
         pldm: true
+        intruder: false
       behavior:
         <<: *base_behavior
         max_speed: 80 # maximum speed, km/h
@@ -191,7 +160,7 @@ scenario:
 
     - name: cav2
       spawn_position: [111.7194, 139.51, 0.3, 0, 0, 0]
-      destination: [606.87, 145.39, 0]
+      destination: [606.87, 143.39, 0]
       sensing:
         perception:
           activate: false
@@ -205,11 +174,12 @@ scenario:
               - [0.0, -0.3, 1.8, -100]
               - [-2.0, 0.0, 1.5, 180]
           lidar: # lidar sensor configuration, check CARLA sensor reference for more details
-            visualize: false
+            visualize: true
       v2x:
         communication_range: 35
         platoon_init_pos: 2
         pldm: true
+        intruder: false
       behavior:
         <<: *base_behavior
         max_speed: 100 # maximum speed, km/h
@@ -221,7 +191,7 @@ scenario:
 
     - name: cav3
       spawn_position: [101.7194, 139.51, 0.3, 0, 0, 0]
-      destination: [606.87, 145.39, 0]
+      destination: [606.87, 143.39, 0]
       sensing:
         perception:
           activate: false
@@ -235,11 +205,12 @@ scenario:
               - [0.0, -0.3, 1.8, -100]
               - [-2.0, 0.0, 1.5, 180]
           lidar: # lidar sensor configuration, check CARLA sensor reference for more details
-            visualize: false
+            visualize: true
       v2x:
         communication_range: 35
         platoon_init_pos: 3
         pldm: true
+        intruder: false
       behavior:
         <<: *base_behavior
         max_speed: 100 # maximum speed, km/h
@@ -250,8 +221,8 @@ scenario:
           debug: false
 
     - name: cav4
-      spawn_position: [71.7194, 139.0, 0.3, 0, 0, 0]
-      destination: [606.87, 145.39, 0]
+      spawn_position: [91.7194, 139.51, 0.3, 0, 0, 0]
+      destination: [606.87, 143.39, 0]
       sensing:
         perception:
           activate: false
@@ -265,11 +236,43 @@ scenario:
               - [0.0, -0.3, 1.8, -100]
               - [-2.0, 0.0, 1.5, 180]
           lidar: # lidar sensor configuration, check CARLA sensor reference for more details
-            visualize: false
+            visualize: true
       v2x:
         communication_range: 35
         platoon_init_pos: 0
         pldm: true
+        intruder: false
+      behavior:
+        <<: *base_behavior
+        max_speed: 100 # maximum speed, km/h
+        tailgate_speed: 111
+        overtake_allowed: true
+        local_planner:
+          debug_trajectory: true
+          debug: false
+
+    - name: cav5
+      spawn_position: [91.7194, 143.51, 0.3, 0, 0, 0]
+      destination: [606.87, 143.39, 0]
+      sensing:
+        perception:
+          activate: false
+          camera:
+            visualize: 0 # how many camera images need to be visualized. 0 means no visualization for camera
+            num: 4 # how many cameras are mounted on the vehicle. Maximum 3(frontal, left and right cameras)
+            # relative positions (x,y,z,yaw) of the camera. len(positions) should be equal to camera num
+            positions:
+              - [2.5, 0, 1.0, 0]
+              - [0.0, 0.3, 1.8, 100]
+              - [0.0, -0.3, 1.8, -100]
+              - [-2.0, 0.0, 1.5, 180]
+          lidar: # lidar sensor configuration, check CARLA sensor reference for more details
+            visualize: true
+      v2x:
+        communication_range: 35
+        platoon_init_pos: 0
+        pldm: false
+        intruder: true
       behavior:
         <<: *base_behavior
         max_speed: 100 # maximum speed, km/h
